Database changes and changes to the automated process.

--- a/source/gpconnect-analytics.DTO/gpconnect-analytics.DTO.csproj
+++ b/source/gpconnect-analytics.DTO/gpconnect-analytics.DTO.csproj
@@ -5,4 +5,8 @@
     <RootNamespace>gpconnect_analytics.DTO</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Splunk.Client.DotnetCore" Version="1.0.7" />
+  </ItemGroup>
+
 </Project>
