--- a/source/gpconnect-analytics.DAL/gpconnect-analytics.DAL.csproj
+++ b/source/gpconnect-analytics.DAL/gpconnect-analytics.DAL.csproj
@@ -8,11 +8,13 @@
   <ItemGroup>
     <PackageReference Include="Azure.Storage.Blobs" Version="12.8.3" />
     <PackageReference Include="Azure.Storage.Queues" Version="12.6.1" />
+    <PackageReference Include="CsvHelper" Version="27.0.4" />
     <PackageReference Include="Dapper" Version="2.0.90" />
     <PackageReference Include="Dapper.FluentMap" Version="2.0.0" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="3.1.13" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="3.1.13" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    <PackageReference Include="Splunk.Client.DotnetCore" Version="1.0.7" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.2" />
   </ItemGroup>
 
