Added Docker support and created a test function which runs every minute.

--- a/source/gpconnect-analytics.DAL/gpconnect-analytics.DAL.csproj
+++ b/source/gpconnect-analytics.DAL/gpconnect-analytics.DAL.csproj
@@ -20,7 +20,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\gpconnect-analytics.DTO\gpconnect-analytics.DTO.csproj" />
-    <ProjectReference Include="..\gpconnect_analytics.Helpers\gpconnect_analytics.Helpers.csproj" />
+    <ProjectReference Include="..\gpconnect-analytics.Helpers\gpconnect-analytics.Helpers.csproj" />
   </ItemGroup>
 
 </Project>
