--- a/source/gpconnect-analytics.Functions/gpconnect-analytics.Functions.csproj
+++ b/source/gpconnect-analytics.Functions/gpconnect-analytics.Functions.csproj
@@ -3,6 +3,8 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <AzureFunctionsVersion>v3</AzureFunctionsVersion>
     <RootNamespace>gpconnect_analytics.Functions</RootNamespace>
+    <DockerFastModeProjectMountDirectory>/home/site/wwwroot</DockerFastModeProjectMountDirectory>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Dapper" Version="2.0.90" />
@@ -10,11 +12,12 @@
     <PackageReference Include="Microsoft.Azure.Functions.Extensions" Version="1.1.0" />
     <PackageReference Include="Microsoft.Azure.WebJobs.Extensions.Storage" Version="3.0.10" />
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="3.0.11" />
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.13" />
     <PackageReference Include="NLog.Web.AspNetCore" Version="4.12.0" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\gpconnect-analytics.DAL\gpconnect-analytics.DAL.csproj" />
-    <ProjectReference Include="..\gpconnect_analytics.Helpers\gpconnect_analytics.Helpers.csproj" />
+    <ProjectReference Include="..\gpconnect-analytics.Helpers\gpconnect-analytics.Helpers.csproj" />
   </ItemGroup>
   <ItemGroup>
     <None Update="host.json">
