--- a/source/Dockerfile
+++ b/source/Dockerfile
@@ -1,5 +1,5 @@
 FROM mcr.microsoft.com/azure-functions/dotnet:3.0 AS base
-WORKDIR /home/site/wwwroot
+WORKDIR /app
 EXPOSE 80
 
 FROM mcr.microsoft.com/dotnet/sdk:3.1 AS build
@@ -19,4 +19,5 @@ RUN dotnet publish "gpconnect-analytics.Functions.csproj" -c Release -o /app/pub
 FROM base AS final
 WORKDIR /home/site/wwwroot
 COPY --from=publish /app/publish .
-ENV AzureWebJobsScriptRoot=/home/site/wwwroot AzureFunctionsJobHost__Logging__Console__IsEnabled=true AzureFunctionsEnvironment=Development
+ENV AzureWebJobsScriptRoot=/home/site/wwwroot
+ENV AzureFunctionsJobHost__Logging__Console__IsEnabled=true
