Code and database changes to incorporate Mesh transactions into the data capture and processing.

--- a/source/gpconnect-analytics.DAL/gpconnect-analytics.DAL.csproj
+++ b/source/gpconnect-analytics.DAL/gpconnect-analytics.DAL.csproj
@@ -16,6 +16,7 @@
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="Splunk.Client.DotnetCore" Version="1.0.7" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.2" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="5.3.0" />
   </ItemGroup>
 
   <ItemGroup>
