--- a/source/gpconnect-analytics.DTO/gpconnect-analytics.DTO.csproj
+++ b/source/gpconnect-analytics.DTO/gpconnect-analytics.DTO.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="Splunk.Client.DotnetCore" Version="1.0.7" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="5.3.0" />
   </ItemGroup>
 
 </Project>
