--- a/.github/workflows/GPConnectAnalytics.yml
+++ b/.github/workflows/GPConnectAnalytics.yml
@@ -14,7 +14,7 @@ jobs:
   build-and-deploy:
     runs-on: windows-latest
     steps:
-    - uses: actions/checkout@master
+    - uses: actions/checkout@develop
     - name: Setup .NET Core
       uses: actions/setup-dotnet@v1
       with:
