--- a/.github/workflows/GPConnectAnalytics.yml
+++ b/.github/workflows/GPConnectAnalytics.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: windows-latest
     steps:
     - name: Check out the repo
-    - uses: actions/checkout@main
+      uses: actions/checkout@main
     - name: Setup .NET Core
       uses: actions/setup-dotnet@v1
       with:
