Fix to the import of MESH transactions where the datetimeoffset could be out causing an error when adding the file to the database.

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ database/flyway-7.0.0/
 serviceDependencies.json
 serviceDependencies.local.json
 *.arm.json
+/source/gpconnect-analytics.Functions/Properties/PublishProfiles/GPConnectAnalytics - Zip Deploy.pubxml
