--- a/source/gpconnect-analytics.DAL/gpconnect-analytics.DAL.csproj
+++ b/source/gpconnect-analytics.DAL/gpconnect-analytics.DAL.csproj
@@ -11,6 +11,8 @@
     <PackageReference Include="CsvHelper" Version="27.0.4" />
     <PackageReference Include="Dapper" Version="2.0.90" />
     <PackageReference Include="Dapper.FluentMap" Version="2.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Abstractions" Version="2.1.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.1.0" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="3.1.13" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="3.1.13" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
