--- a/source/gpconnect-analytics.Helpers/gpconnect-analytics.Helpers.csproj
+++ b/source/gpconnect-analytics.Helpers/gpconnect-analytics.Helpers.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="3.1.13" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
 
 </Project>
